nerv/main/cluster/apps/windmill/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: windmill
  annotations:
    external-dns.alpha.kubernetes.io/target: ex.nerv.id
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  hostnames:
    - wm.nerv.id
  rules:
    - backendRefs:
        - name: windmill-app
          port: 8000
          weight: 100
